Fix a few warnings